# stoned-selfies

./: pyproject.toml
notebooks/: tutorial01.ipynb
original/: stoned_selfies_tut.ipynb
original/.ipynb_checkpoints/: stoned_selfies_tut-checkpoint.ipynb
pystoned/: fingerprints.py  pystoned.py
